--- a/notebooks/BlackMask.ipynb
+++ b/notebooks/BlackMask.ipynb
@@ -9,9 +9,7 @@
     "import numpy as np\n",
     "import cv2\n",
     "import glob\n",
-    "import os\n",
-    "\n",
-    "\n"
+    "import os"
    ]
   },
   {
